# rustical-aae

./: package.json  pnpm-lock.yaml  tsconfig.json  typeshare.ts
src/: App.tsx  client.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: 000_init.sql
src-tauri/src/: _citizen.rs  agent.rs  citizen.rs  city.rs  db.rs  game_manager.rs  main.rs  structs.rs  test.rs  utils.rs
src-tauri/src/citizen/: sub.rs  test.rs
src-tauri/src/game_manager/: game_data.rs
src-tauri/src/router/: app.rs  mod.rs
src-tauri/src/structs/: battle.rs  citizen.rs  city.rs  country.rs  item.rs  region.rs
src-tauri/src/structs/battle/: units.rs
src-tauri/src/structs/citizen/: db.rs  relation.rs  sub.rs
src/components/: SavedData.tsx
src/components/InfoPanel/: CountryPanel.tsx  StatePanel.tsx  index.tsx
src/components/Interface/: Tooltip.tsx
src/components/battle/: BattleScreen copy.tsx  BattleScreen.tsx  test.json
src/components/core/: Citizren.ts  City.ts  Country.ts  MapRenderer.tsx  Region.ts
src/core/: Citizren.ts  City.ts  MapRenderer.tsx  Region.ts
src/store/: InitialState.ts  createSlice.ts  index.ts
src/types/: MapData.ts
src/types/rspc/: bindings.ts
src/utils/: GameCache.ts  NumericUtils.ts  constans.tsx  date.ts  genMapData.tsx  rfdc.ts  rust.ts
