[package]
name = "rustical-aae"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"
directories = "4.0.1"
rand = "0.8.5"
parking_lot = "0.12.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
anyhow = "1.0.69"
dunce = "1.0.3"
spin_sleep = "1.1.1"
rayon = "1.7.0"
once_cell = "1.17.1"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
