[package]
name = "rustical-aae"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-confirm", "dialog-message", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "process-exit", "process-relaunch", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"
directories = "4.0.1"
rand = "0.8.5"
parking_lot = "0.12.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
anyhow = "1.0.69"
dunce = "1.0.3"
spin_sleep = "1.1.1"
rayon = "1.7.0"
once_cell = "1.17.1"
chrono = "0.4.24"
typeshare = "1.0.0"
regex = "1.7.3"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
rspc = { version = "0.1.2", features = ["tauri"] }
async-trait = "0.1.68"
async-stream = "0.3.5"
tokio-stream = "0.1.12"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
